fixing filters on mobile disposition

--- a/resources/sass/filter.scss
+++ b/resources/sass/filter.scss
@@ -75,3 +75,12 @@ div[dusk="filter-selector"] {
         width: 100% !important;
     }
 }
+
+.filter-menu-wrapper {
+    align-items: center;
+
+    @media (max-width: 640px) {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+}
